--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,6 @@ rsconnect/
 *.pdf
 data/
 !presentations/*.pdf
-!presentations/*.rmd
-!presentations/*.html
+!optimizationwithr/*.rmd
+!optimizationwithr/*.html
 !homework/*.pdf
